// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Edit Post Controller Snapshot Test for author not found. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Edit Post Controller Snapshot Test for empty request body, 1`] = `
{
  "body": {
    "message": "Request body cannot be empty.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Edit Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Edit Post Controller Snapshot Test for missing description. 1`] = `
{
  "body": {
    "message": "Title and description are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Edit Post Controller Snapshot Test for missing title. 1`] = `
{
  "body": {
    "message": "Title and description are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Edit Post Controller Snapshot Test for no permission to edit post. 1`] = `
{
  "body": {
    "message": "You do not have permission to edit this article.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Edit Post Controller Snapshot Test for post article not found. 1`] = `
{
  "body": {
    "message": "Article not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Edit Post Controller Snapshot Test for update post successfully. 1`] = `
{
  "body": {
    "data": {
      "author": "507f1f77bcf86cd799439011",
      "comments": 12,
      "createdAt": "2026-03-04T17:00:19.599Z",
      "deletedAt": null,
      "description": "newUpdatedDescription",
      "id": "69a8652b69726b384c21b27d",
      "isPinned": false,
      "isTrashed": false,
      "likes": 924,
      "title": "newUpdatedTitle",
      "updatedAt": "2026-03-04T17:40:19.599Z",
    },
    "message": "Article updated successfully.",
    "success": true,
  },
  "status": 200,
}
`;
